@@ -19,6 +19,9 @@
 package org.apache.tajo.engine.planner.physical;
 
 import org.apache.tajo.catalog.statistics.TableStats;
+import org.apache.tajo.common.TajoDataTypes;
+import org.apache.tajo.datum.DatumFactory;
+import org.apache.tajo.datum.NullDatum;
 import org.apache.tajo.engine.planner.logical.DistinctGroupbyNode;
 import org.apache.tajo.engine.planner.logical.GroupbyNode;
 import org.apache.tajo.storage.Tuple;
@@ -79,11 +82,14 @@ public class DistinctGroupbySortAggregationExec extends PhysicalExec {
     }
 
     boolean allNull = true;
+
     for (int i = 0; i < groupbyNodeNum; i++) {
       if (first && i > 0) {
         // All SortAggregateExec uses same SeqScanExec object.
         // After running sort, rescan() should be called.
-        aggregateExecs[i].rescan();
+        if (currentTuples[i-1] != null) {
+          aggregateExecs[i].rescan();
+        }
       }
       currentTuples[i] = aggregateExecs[i].next();
 
@@ -91,6 +97,13 @@ public class DistinctGroupbySortAggregationExec extends PhysicalExec {
         allNull = false;
       }
     }
+
+    // If DistinctGroupbySortAggregationExec received NullDatum and didn't has any grouping keys,
+    // it should return primitive values for NullDatum.
+    if (allNull && aggregateExecs[0].groupingKeyNum == 0 && first)   {
+      return getEmptyTuple();
+    }
+
     first = false;
 
     if (allNull) {
@@ -111,6 +124,33 @@ public class DistinctGroupbySortAggregationExec extends PhysicalExec {
       }
     }
     return mergedTuple;
+  }
+
+  private Tuple getEmptyTuple() {
+    Tuple tuple = new VTuple(outColumnNum);
+    NullDatum nullDatum = DatumFactory.createNullDatum();
+
+    for (int i = 0; i < outColumnNum; i++) {
+      TajoDataTypes.Type type = outSchema.getColumn(i).getDataType().getType();
+      if (type == TajoDataTypes.Type.INT8) {
+        tuple.put(i, DatumFactory.createInt8(nullDatum.asInt8()));
+      } else if (type == TajoDataTypes.Type.INT4) {
+        tuple.put(i, DatumFactory.createInt4(nullDatum.asInt4()));
+      } else if (type == TajoDataTypes.Type.INT2) {
+        tuple.put(i, DatumFactory.createInt2(nullDatum.asInt2()));
+      } else if (type == TajoDataTypes.Type.FLOAT4) {
+        tuple.put(i, DatumFactory.createFloat4(nullDatum.asFloat4()));
+      } else if (type == TajoDataTypes.Type.FLOAT8) {
+        tuple.put(i, DatumFactory.createFloat8(nullDatum.asFloat8()));
+      } else {
+        tuple.put(i, DatumFactory.createNullDatum());
+      }
+    }
+
+    finished = true;
+    first = false;
+
+    return tuple;
   }
 
   @Override
