@@ -18,6 +18,7 @@
 
 package org.apache.tajo.engine.planner.physical;
 
+import org.apache.tajo.datum.NullDatum;
 import org.apache.tajo.engine.function.FunctionContext;
 import org.apache.tajo.engine.planner.logical.GroupbyNode;
 import org.apache.tajo.storage.Tuple;
@@ -68,7 +69,12 @@ public class SortAggregateExec extends AggregationExec {
         if (lastKey == null) {
           for(int i = 0; i < aggFunctionsNum; i++) {
             contexts[i] = aggFunctions[i].newContext();
-            aggFunctions[i].merge(contexts[i], inSchema, tuple);
+
+            // Merge when aggregator doesn't receive NullDatum
+            if (!(groupingKeyNum == 0 && aggFunctionsNum == tuple.size()
+                && tuple.get(i) == NullDatum.get())) {
+              aggFunctions[i].merge(contexts[i], inSchema, tuple);
+            }
           }
           lastKey = currentKey;
         } else {
