@@ -1,0 +1,1 @@
+select count(1) as unique_key from table1;
