@@ -1,0 +1,1 @@
+select max(point) as maximum, count(age) as unique_key from table1;
